src/containers/Info.css
.modal-content {
    background-color: #FFF7F0 !important;
}

.modal-content h1 {
    color: #FB552C;
}

.modal-body button {
    background-color: #FB552C !important;
    width: 30%;
    margin-left: 35%;
}

.info-header {
    position: fixed;
    width: 100%;
    z-index: 1060;
    height: 6vh;
    background-color: #fff;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .06);
}

.info-page {
    padding: 3%;
    background-color: #ffffff;
}

.info-page#info-page-2 {
    padding: 3%;
    background-color: #FFF7F0;
}

.info-page#info-page-3 {
    padding: 3%;
    background-color: #FFF7F0;
}

.info-page#info-page-5 {
    padding: 3%;
    background-color: #FFF7F0;
}

.banner {
    background: rgb(242, 188, 21);
    background: linear-gradient(90deg, rgba(242, 188, 21, 1) 0%, rgba(252, 58, 50, 1) 100%);
}

.info-footer {
    width: 90%;
    height: 80px;
    font-style: normal;
    font-weight: normal !important;
    font-size: 32px !important;
    line-height: 33px !important;
    text-align: center;
    letter-spacing: -1px;
    color: #3D3D3D;
    margin: auto;
    margin-top: 2%;
}

.anchor-link {
    background: none!important;
    border: none;
    padding: 0!important;
    /*optional*/
    font-family: Rubik;
    /*input has OS specific font-family*/
    color: #3D3D3D;
    cursor: pointer;
}
.anchor-link:hover {
    text-decoration: underline;
}

.info-container button.login {
    background-color: transparent !important;
    border: none;
    font-weight: 200 !important
}

.info-container button.signup {
    background-color: transparent !important;
    border: none;
    margin-right: 0 !important;
    font-weight: 200 !important
}

.info-bean {
    width: 855px;
    height: auto;
    margin: auto auto auto 0;
}

.info-mac {
    width: 1035px;
    margin: auto;
    margin-top: 2%;
}

.info-phone {
    height: 515px;
    width: auto;
    margin-top: auto;
    margin-bottom: auto;
}

.info-phone#flights {
    margin-right: auto;
    margin-left: 10%;
}

.info-phone#profile {
    margin-right: 10%;
    margin-left: auto;
}

.info-container h1 {
    width: 82%;
    font-style: normal;
    font-weight: 500 !important;
    font-size: 124px !important;
    line-height: 74px !important;
    letter-spacing: -0.01em;
    color: #FB552C;
    margin-left: auto;
    margin-right: auto;
}

.info-container h2 {
    width: 80%;
    font-style: normal;
    font-weight: normal !important;
    font-size: 30px !important;
    line-height: 36px !important;
    letter-spacing: -1px;
    color: #3D3D3D;
    margin-left: auto;
    margin-right: auto;
}

.info-container h3.info-1 {
    width: 545px;
    height: 116px;
    font-style: normal;
    font-size: 48px !important;
    line-height: 57px !important;
    font-weight: bold !important;
    text-align: right;
    letter-spacing: -0.01em;
    color: #FB552C;
    margin-left: auto;
    margin-right: 1%;
    margin-top: auto;
}

.info-container h4.info-1 {
    width: 545px;
    height: 116px;
    font-style: normal;
    font-weight: normal !important;
    font-size: 22px !important;
    line-height: 26px !important;
    text-align: left;
    letter-spacing: -1px;
    color: #3D3D3D;
    margin-left: 1%;
    margin-right: auto;
    margin-top: auto
}

.info-container h3.info-2 {
    width: 75%;
    font-style: normal;
    font-size: 48px !important;
    line-height: 57px !important;
    font-weight: bold !important;
    text-align: right;
    letter-spacing: -0.01em;
    color: #FB552C;
    margin-left: auto;
    margin-right: auto;
    margin-top: auto;
}

.info-container h4.info-2 {
    width: 75%;
    font-style: normal;
    font-weight: normal !important;
    font-size: 22px !important;
    line-height: 26px !important;
    text-align: right;
    letter-spacing: -1px;
    color: #3D3D3D;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: auto;
}

.info-container h3.info-3 {
    width: 75%;
    margin-right: auto;
    margin-left: auto;
    margin-top: auto;
    font-style: normal;
    font-size: 48px !important;
    line-height: 57px !important;
    font-weight: bold !important;
    text-align: left;
    letter-spacing: -0.01em;
    color: #FB552C;
}

.info-container h4.info-3 {
    width: 75%;
    margin-right: auto;
    margin-left: auto;
    margin-bottom: auto;
    font-style: normal;
    font-weight: normal !important;
    font-size: 22px !important;
    line-height: 26px !important;
    text-align: left;
    letter-spacing: -1px;
    color: #3D3D3D;
}

.info-container h3.info-5 {
    height: 65px;
    text-align: center !important;
    margin-right: auto;
    margin-left: auto;
    font-style: normal;
    font-size: 48px !important;
    line-height: 57px !important;
    font-weight: bold !important;
    text-align: right;
    letter-spacing: -0.01em;
    color: #FB552C;
}

.info-container h4.info-5 {
    width: 545px;
    height: 65px;
    margin-right: 55%;
    margin-left: auto;
    font-style: normal;
    font-weight: normal !important;
    font-size: 25px !important;
    line-height: 26px !important;
    text-align: left;
    letter-spacing: -1px;
    color: #3D3D3D;
}

.info-container .beta-btn {
    margin-left: auto;
    margin-right: auto;
    width: 275px;
    height: 55px;
    font-style: normal !important;
    font-weight: 500 !important;
    font-size: 24px !important;
    line-height: 28px !important;
    align-items: center !important;
    text-align: center !important;
    background-color: #FB552C !important;
    border-radius: 8px !important;
}

.beta-btn-container {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
}

.banner h1 {
    width: auto;
    height: auto;
    font-style: normal;
    font-weight: bold;
    font-size: 45px !important;
    line-height: 44px !important;
    letter-spacing: -0.01em;
    color: white;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

.banner col {
    justify-content: center;
    display: flex;
    flex-direction: column;
}
/* ... */

